<resources>
    <string name="app_name">הסורקים-ניהול</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo_content_description">לוגו</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="sign_in_cancelled">התחברות בוטלה</string>
    <string name="no_internet_connection">אין חיבור לאינטרנט</string>
    <string name="unknown_error">שגיאת התחברות לא ידועה</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="title_activity_settings">הגדרות</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">כללי</string>
    <string name="pref_title_phone_number">מספר טלפון</string>
    <string name="pref_default_phone_number">""</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">התראות</string>
    <string name="pref_title_new_message_notifications">התראות על שינוי סטטוס דיווח</string>
    <string name="pref_title_ringtone">צליל</string>
    <string name="pref_ringtone_silent">שקט</string>
    <string name="pref_title_vibrate">רטט</string>
    <string name="pref_title_radius">רדיוס התראות (ק״מ)</string>
    <string name="pref_default_radius">5</string>
    <string name="pref_title_notification_radius">קבע הגבלת התראות</string>
    <string name="all_reports">כל הדיווחים</string>
    <string name="open_reports">דיווחים פתוחים</string>
    <string name="new_reports">דיווחים חדשים</string>
    <string name="my_reports">הדיווחים שלי</string>
    <string name="setting">הגדרות</string>
    <string name="Share">שתף</string>
    <string name="agri">מאגר משרד החקלאות</string>
    <string name="Community">קהילה</string>
    <string name="statistics">סטטיסטיקות דיווחים</string>
    <string name="distance_from_report_address">מרחק:</string>
    <string name="report_status_in_list">סטטוס:</string>
    <string name="number_of_scanners">סורקים זמינים:</string>
    <string name="report_time">זמן פתיחה:</string>
    <string name="report_address">כתובת:</string>
    <string name="סטטיסטיקות">סטטיסטיקות</string>
    <string name="report_this_month">סה\"כ נפתחו החודש</string>
    <string name="report_closed_successfully_this_month">סה\"כ נסגרו בהצלחה החודש</string>
    <string name="overall_open_reports">סה\"כ נפתחו באפליקציה</string>
    <string name="average_new_time">זמן ממוצע מפתיחת דיווח עד יציאה של סורק</string>
    <string name="I_am_available_for_scan">אני פנוי/ה לסריקה</string>
    <string name="unavailable_for_scan">ביטול הרשמה</string>
    <string name="on_my_way_to_scan">יצאתי לדרך</string>
    <string name="report_scanner_view_photo">תמונה:</string>
    <string name="report_scanner_view_name">שם:</string>
    <string name="report_scanner_view_phone">טלפון:</string>
    <string name="report_view_scanner_comments">הערות המדווח/ת:</string>
    <string name="report_scanner_view_status">סטטוס:</string>
    <string name="report_scanner_view_address">כתובת:</string>
    <string name="report_scanner_view_time">זמן פתיחה:</string>
    <string name="estimated_arrival_time">זמן נסיעה משוער:</string>
    <string name="report_scanner_view_estimated_time_arrival">לא ניתן לחשב זמן הגעה</string>
    <string name="report_manager_view_status">סטטוס:</string>
    <string name="report_manager_view_address">כתובת:</string>
    <string name="report_view_manager_open_time">זמן פתיחה:</string>
    <string name="report_view_manager_reporter_name">שם:</string>
    <string name="report_view_manager_phone_number">טלפון:</string>
    <string name="report_view_manager_extra_phone_number">טלפון נוסף:</string>
    <string name="report_current_assigned_scanner">סורק נוכחי:</string>
    <string name="report_view_manager_comments">הערות המדווח/ת:</string>
    <string name="report_view_manager_available_scanners"><u>רשימת סורקים זמינים</u></string>
    <string name="scanner_was_not_assigned">לא בוצעה השמה של סורק</string>
    <string name="moag_website">http://www.moag.gov.il/Pages/DogSearch.aspx</string>
    <string name="choose_scanner">בחר סורק/ת</string>
    <string name="scanner_was_chosen">בטל סורק/ת</string>
    <string name="scanner_list_name">שם:</string>
    <string name="scanner_list_distance">מרחק:</string>
    <string name="manager_close_report">סגירת דיווח</string>
    <string name="manager_delete_report">ביטול דיווח</string>
    <string name="close_report_dialog"><b>סגירת הדיווח</b></string>
    <string name="close_report_dialog_message">אנא הכנס את סיבת הסגירה</string>
    <string name="close_report_in_dialog">סגור דיווח</string>
    <string name="cancel_report_dialog"><b>ביטול הדיווח</b></string>
    <string name="cancel_report_dialog_message">אנא הכנס את סיבת הביטול</string>
    <string name="cancel_report_in_dialog">בטל דיווח</string>
    <string name="go_back_in_dialog">חזור</string>
    <string name="closing_reason_headline">סיבת הסגירה:</string>
    <string name="cancellation_reason_headline">סיבת הביטול:</string>
    <string name="report_cancelled_by_headline">בוטל על ידי:</string>
    <string name="share">שתף</string>
    <string name="need_permission">לא ניתן יהיה לשתף את תמונת הדיווח ללא הרשאה זו</string>
    <string name="cancel">ביטול</string>
    <string name="confirm">אישור</string>
    <string name="attention"><b>שים/י לב!</b></string>
    <string name="replacing_manager_message">כבר קיים מנהל אשר הדיווח בטיפולו. האם את/ה בטוח/ה שברצונך להחליף את המנהל הנוכחי?</string>
    <string name="deleting_manager_message">האם את/ה בטוח/ה שברצונך למחוק את שמך מניהול הדיווח? לחיצה על אישור תשאיר את שם מנהל הדיווח ריק</string>
    <string name="take_charge_of_report">ניהול דיווח</string>
    <string name="manager_of_report">מנהל/ת הדיווח:</string>
    <string name="delete_charge_of_report">ביטול ניהול</string>
    <string name="to_my_reports_list">לרשימת הדיווחים שלי</string>
    <string name="report_photo_description">The dog\'s photo</string>
    <string name="is_dog_with_reporter">האם סומן בדיווח שהכלב קשור?</string>
    <string name="dog_is_with_reporter">כן</string>
    <string name="dog_is_not_with_reporter">לא</string>
    <string name="closing_reason_was_not_entered">לא הוכנסה סיבת סגירה</string>
    <string name="cancelling_reason_was_not_entered">לא הוכנסה סיבת ביטול</string>
    <string name="manager_not_in_charge_popup_string">רק מי שרשום/ה כמנהל/ת הדיווח יכול/ה לסגור/לבטל אותו</string>
    <string name="more_than_one_scanner_selected_string">לא ניתן לבחור יותר מסורק אחד עבור דיווח</string>
    <string name="manager_not_in_charge_popup_title"><b>שים/י לב!</b></string>
    <string name="scanner_not_in_charge_popup_title"><b>שים/י לב!</b></string>
    <string name="back">חזור</string>
    <string name="scanner_cancel_after_being_assigned">נבחר/ת לסריקה עבור הדיווח הנוכחי. האם את/ה בטוח/ה שברצונך לבטל את הרשמתך לסריקה?</string>
    <string name="scanner_cancel_after_reporting_on_the_way">כבר דיווחת יציאה ליעד. האם את/ה בטוח/ה שברצונך לבטל את הרשמתך לסריקה?</string>
    <string name="add_your_name">להשלמת התהליך נא הכניסו את שמכם</string>
    <string name="wait_for_approval">פרטיך התקבלו וחשבונך יאושר בהקדם</string>
    <string name="received_your_request">קיבלנו את בקשתך להצטרפות לאפליקציית המנהלים</string>
    <string name="report_details_headline">פרטי דיווח</string>
    <string name="available_scanners_headline">רשימת סורקים זמינים</string>
    <string name="manage_report_headline">ניהול דיווח</string>
    <string name="administrative_report_details_headline">פרטי דיווח מנהליים</string>
    <string name="general_key">AIzaSyCqnQU1rlTfEbN5yEj6XFRmcKEWep8Zumc</string>
    <string name="no_reports_exists">לא קיימים דיווחים פעילים על שמך</string>
    <string name="channel_name">hasorkim</string>
    <string name="channel_description">hasorkim</string>
    <string name="isManager">isManager</string>
    <string name="UserId">uderId</string>
</resources>
