<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/reports" />

        <item
            android:id="@+id/nav_my_reports"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_reports"
            android:visible="false"/>

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/statistics" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/Community">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_agri"
                android:icon="@drawable/ic_local_florist_black_24dp"
                android:title="@string/agri" />
        </menu>
    </item>

</menu>
