<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/report_view_padding"
    tools:context="il.ac.tau.cloudweb17a.hasorkimmanagers.ReportViewManagerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/standard_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/report_manager_view_status"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/managerReportStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:paddingStart="@dimen/report_list_item_padding"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/report_status_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8sp"
                    android:layout_weight="1"
                    android:text="@string/report_manager_view_address"
                    android:textSize="@dimen/report_item_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/managerReportLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5"
                    android:textSize="@dimen/report_item_text_size"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/report_status_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/report_view_manager_open_time"
                    android:textSize="@dimen/report_item_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/managerReportOpenTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.8"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/report_item_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/report_status_padding"
                android:layout_marginBottom="@dimen/report_list_item_padding">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_view_manager_reporter_name"
                        android:textSize="@dimen/report_item_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/managerReportReporterName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/details_buttons_padding"
                        android:textSize="@dimen/report_item_text_size"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_view_manager_phone_number"
                        android:textSize="@dimen/report_item_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/managerReportPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/details_buttons_padding"
                        android:textSize="@dimen/report_item_text_size"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/managerReportExtraTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:orientation="horizontal"
                android:paddingTop="@dimen/report_status_padding"
                android:paddingBottom="@dimen/report_list_item_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/report_view_manager_comments"
                    android:textSize="@dimen/report_item_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/managerReportExtraText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:text="@string/comments_were_not_reported"
                    android:textSize="@dimen/report_item_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/report_status_padding"
                android:paddingBottom="@dimen/report_status_padding"
                android:textStyle="bold"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/managerReportImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/dog1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/report_status_padding"
                android:paddingBottom="@dimen/report_view_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/report_current_assigned_scanner"
                    android:textSize="@dimen/report_item_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/managerReportCurrentScanner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.6"
                    android:text="@string/scanner_was_not_assigned"
                    android:textSize="@dimen/report_item_text_size"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/report_view_manager_available_scanners"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/report_list_item_padding"/>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_text_size">

                <ListView
                    android:id="@+id/list_view_scanners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:focusable="true" />
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/scannerAvailable"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/save_report"
        android:textSize="25sp" />

</LinearLayout>
